<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <DUT Name="ST_TransportTube" Id="{7c9cbec2-6600-4d30-850e-136d1c48cefb}">
    <Declaration><![CDATA[TYPE ST_TransportTube :
STRUCT
	eTube : E_TransportTube;
	stDevices : ST_TransportTubeDevices;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>