<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <DUT Name="T_TransportTube" Id="{39aed121-ba92-4c86-a28b-34f6e10d06c2}">
    <Declaration><![CDATA[// Create a generic transport tube type in case E_TransportTube ever needs to be split up into
// multiple enums (such as input and output tubes). That way all the different Transport tube enums 
// can still have a common type.
TYPE T_TransportTube : UINT; END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>