<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.17">
  <POU Name="F_GetTransportTubeStatuses" Id="{09b6220d-41cc-0b3f-3e37-f70d9621ad78}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION F_GetTransportTubeStatuses : ST_TransportTubeStatuses
VAR_INPUT
	eTransportTube : T_TransportTube;
END_VAR
VAR
	fbTT : REFERENCE TO FB_TransportTube;
	stStatus : ST_TransportTubeStatuses := ();
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[fbTT REF= F_GetTransportTube(eTransportTube);

stStatus.bIonPumpOn := fbTT.q_stConfig.stDevices.refIonPump.q_xHVEna_DO;
stStatus.bGateValveOpen := fbTT.q_stConfig.stDevices.refGateValve.M_IsOpen();
stStatus.fPiraniVal := fbTT.q_stConfig.stDevices.refPiraniGauge.PG.rPRESS;
stStatus.fColdCathodeVal := fbTT.q_stConfig.stDevices.refColdCathode.IG.rPRESS;

F_GetTransportTubeStatuses := stStatus;]]></ST>
    </Implementation>
    <LineIds Name="F_GetTransportTubeStatuses">
      <LineId Id="88" Count="6" />
      <LineId Id="7" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>